# agent-starter-python

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: agent.py  log_config.py
src/plugins/cosyvoice/: __init__.py  client.py  config.py  protocol.py  stream.py  tts.py
src/plugins/funasr/: stt.py
src/plugins/funasr_offline/: __init__.py  audio.py  config.py  protocol.py  stt.py  transport.py
src/plugins/funasr_streaming/: __init__.py  client.py  config.py  protocol.py  stream.py  stt.py  transport.py
tests/: test_agent.py  test_agent_video.py  test_cosyvoice_tts.py  test_funasr_offline_stt.py  test_funasr_stt.py
