[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents~=1.5",
    "livekit-plugins-silero",
    "livekit-plugins-turn-detector",
    "livekit-plugins-openai",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "python-dotenv",
    "structlog>=24.0",
    "orjson>=3.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF002", "RUF003"]  # E501: line too long; RUF002/3: Chinese punctuation false positives

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
